feat("personal-config"): add API for config personal deduction
-------------------------
HTTP Method: POST

URL: "/admin/deductions/personal"

Header

  Authorization: Basic auth
  Content-Type: "application/json"

Body

`json
  {
    "amount": 60000.0
  }
`

--------------------------
